--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -66,5 +66,28 @@
         <mj-button>retrouvez toutes nos offres wifi</mj-button>
       </mj-column>
     </mj-section>
+    <mj-section>
+      <mj-column>
+        <mj-image src="./images/illustrationGS108E.png" alt=""/>
+        <mj-text>Des Switches de pointe</mj-text>
+        <mj-text>Les switches NETGEAR non manageables sont les plus populaires auprès des petites entreprises. Au cours des 25 dernières années, nous avons vendu plusieurs millions de switches, dans le monde entier. Nos clients apprécient la fiabilité, la qualité de fabrication, la facilité d'installation et la rentabilité.</mj-text>
+        <mj-text>Les switches Web manageables NETGEAR offrent des fonctionnalités avancées de niveau 2. Ils sont conçus pour les réseaux convergents où les données comme la voix ou la vidéo sont routées via une plateforme unique. Les fonctionnalités ACL, la QoS, l'agrégation de lien LACP et le protocole STP garantissent un environnement sécurisé & haut débit pour les besoins réseau de l'entreprise.</mj-text>
+      </mj-column>
+      <mj-group>
+        <mj-column>
+          <mj-image src="./images/gs108e.png" alt=""/>
+        </mj-column>
+        <mj-column>
+          <mj-text>gs108e</mj-text>
+          <mj-text>8 ports Gigabit</mj-text>
+          <mj-text>Gestion des vlans</mj-text>
+          <mj-text>Garantie : à vie</mj-text>
+          <mj-text>Référence : gs108e-100eus</mj-text>
+        </mj-column>
+      </mj-group>
+      <mj-column>
+        <mj-button>retrouvez toutes nos offres sur le switching</mj-button>
+      </mj-column>
+    </mj-section>
   </mj-body>
 </mjml>
