--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -89,5 +89,29 @@
         <mj-button>retrouvez toutes nos offres sur le switching</mj-button>
       </mj-column>
     </mj-section>
+    <mj-section>
+      <mj-column>
+        <mj-image src="./images/illustrationGS308P.png" alt=""></mj-image>
+        <mj-text>Alimentez vos périphériques via le PoE</mj-text>
+        <mj-text>La technologie PoE fournit une alimentation électrique et une connectivité réseau pour les périphériques PoE via un câble réseau. Vous pouvez placer des appareils tels que des points d'accès WiFi, des caméras IP, des téléphones, des téléphones IP, des éclairages LED et des systèmes de sécurité, ... où bon vous semble car vous n'avez plus besoin d'alimentation électrique à proximité. Ces appareils sont alimentés et manageables via nos switches PoE, que ce soit au bureau ou à la maison.</mj-text>
+      </mj-column>
+    </mj-section>
+    <mj-section> 
+      <mj-group>
+        <mj-column>
+          <mj-image src="./images/gs308p.png" alt=""></mj-image>
+        </mj-column>
+        <mj-column>
+          <mj-text>gs308p</mj-text>
+          <mj-text>8 ports Gigabit dont 4 PoE</mj-text>
+          <mj-text>Budget PoE : 53 W</mj-text>
+          <mj-text>Garantie : 3 ans</mj-text>
+          <mj-text>Référence : GS308P-100EUS</mj-text>
+        </mj-column>
+      </mj-group>
+      <mj-column>
+        <mj-button>retrouvez toutes nos offres sur le switching poe</mj-button>
+      </mj-column>
+    </mj-section>
   </mj-body>
 </mjml>
