--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -122,5 +122,30 @@
         <mj-text>* Offres spéciales partenaires valables chez les distributeurs officiels ALSO, INGRAM, EXERTIS, TECH DATA jusqu'au 24/09/2021 dans la limite des stocks facturables. Non cumulables avec d'autres offres spéciales. Ces offres peuvent être arrêtées à tout moment par NETGEAR. Prix d'achat revendeur promotionnels indicatifs, les distributeurs NETGEAR sont libres de fixer leur prix de revente.</mj-text>
       </mj-column>
     </mj-section>
+    <mj-section>
+      <mj-column> 
+        <mj-image src="./images/netgearBusinessBlack.png" alt=""/>
+      </mj-column>
+      <mj-column>
+        <mj-spacer height="20px"></mj-spacer>
+      </mj-column>
+      <mj-column>
+        <mj-social>
+          <mj-social-element src="./images/facebookIcon.png" href="https://www.facebook.com/NetgearBusiness"></mj-social-element>
+          <mj-social-element src="./images/twitterIcon.png" href="https://twitter.com/NetgearBusiness"></mj-social-element>
+          <mj-social-element src="./images/linkedinIcon.png" href="https://www.linkedin.com/company/netgearbusiness/"></mj-social-element>
+          <mj-social-element src="./images/youtubeIcon.png" href="https://www.youtube.com/user/NETGEAR"></mj-social-element>
+        </mj-social>
+      </mj-column>
+    </mj-section>
+    <mj-section>
+      <mj-column>
+        <mj-text>01 39 23 99 59 | reponserapide@netgear.com | NETGEAR | 2 rue de Marly le roi 78150 LE CHESNAY</mj-text>
+        <mj-text>Cet email est destiné à %%emailaddr%% . Si vous ne souhaitez plus recevoir d'emails, vous pouvez vous désinscrire .</mj-text>
+        <mj-text>Cet email a été envoyé par : %%Member_Busname%%</mj-text>
+        <mj-text>%%Member_Addr%% %%Member_City%%, %%Member_State%%, %%Member_PostalCode%%, %%Member_Country%%</mj-text>
+        <mj-text>Mise à jour de votre profil</mj-text>
+      </mj-column>
+    </mj-section>
   </mj-body>
 </mjml>
