mettre en place texte image bloc header

--- a/src/includes/_prod01.pug
+++ b/src/includes/_prod01.pug
@@ -3,6 +3,7 @@ mj-section
         mj-image(src="./images/illustrationWAX214.png" alt="")/
         mj-text Un WiFi puissant et abordable
         mj-text Des TPE aux PME, NETGEAR propose une gamme de produits WiFi qui fournit des connexions ultra-rapides à un tarif abordable. Déployez un WiFi professionnel, sécurisé et fiable avec NETGEAR.
+mj-section
     mj-group
         mj-column
             mj-image(src="./images/wax214.png" alt="")/
