--- a/src/includes/_prod02.pug
+++ b/src/includes/_prod02.pug
@@ -4,6 +4,7 @@ mj-section
         mj-text Des Switches de pointe
         mj-text Les switches NETGEAR non manageables sont les plus populaires auprès des petites entreprises. Au cours des 25 dernières années, nous avons vendu plusieurs millions de switches, dans le monde entier. Nos clients apprécient la fiabilité, la qualité de fabrication, la facilité d'installation et la rentabilité.
         mj-text Les switches Web manageables NETGEAR offrent des fonctionnalités avancées de niveau 2. Ils sont conçus pour les réseaux convergents où les données comme la voix ou la vidéo sont routées via une plateforme unique. Les fonctionnalités ACL, la QoS, l'agrégation de lien LACP et le protocole STP garantissent un environnement sécurisé & haut débit pour les besoins réseau de l'entreprise.
+mj-section
     mj-group
         mj-column
             mj-image(src="./images/gs108e.png" alt="")/
