mettre en place des formes de l'ensemble des blocs

--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -1,4 +1,4 @@
 mj-section
     mj-column 
-        mj-text Nouvelles promotions partenaires 
-        mj-text 3ème trimestre
+        mj-text(padding="0" align="center") Nouvelles promotions partenaires 
+        mj-text(padding="0" align="center") 3e trimestre
