--- a/src/includes/_prod01.pug
+++ b/src/includes/_prod01.pug
@@ -1,10 +1,10 @@
 mj-section
     mj-column
-        mj-image(src="./images/illustrationWAX214.png" alt="")/
-        mj-text Un WiFi puissant et abordable
-        mj-text Des TPE aux PME, NETGEAR propose une gamme de produits WiFi qui fournit des connexions ultra-rapides à un tarif abordable. Déployez un WiFi professionnel, sécurisé et fiable avec NETGEAR.
+        mj-image(padding="0" width="700px" src="./images/illustrationWAX214.png" alt="")/
+        mj-text(padding="0" align="center") Un WiFi puissant et abordable
+        mj-text(padding="0" align="center") Des TPE aux PME, NETGEAR propose une gamme de produits WiFi qui fournit des connexions ultra-rapides à un tarif abordable. Déployez un WiFi professionnel, sécurisé et fiable avec NETGEAR.
 mj-section
-    mj-group
+    mj-group(width="100%")
         mj-column
             mj-image(src="./images/wax214.png" alt="")/
         mj-column
@@ -15,5 +15,5 @@ mj-section
             mj-text Alimentable en PoE
             mj-text Garantie : 5ans
             mj-text Référence : WAX214-100EUS
-    mj-column
+    mj-column(width="100%")
         mj-button retrouvez toutes nos offres wifi
