--- a/src/includes/_prod03.pug
+++ b/src/includes/_prod03.pug
@@ -1,10 +1,10 @@
 mj-section
     mj-column
-        mj-image(src="./images/illustrationGS308P.png" alt="")
-        mj-text Alimentez vos périphériques via le PoE
-        mj-text La technologie PoE fournit une alimentation électrique et une connectivité réseau pour les périphériques PoE via un câble réseau. Vous pouvez placer des appareils tels que des points d'accès WiFi, des caméras IP, des téléphones, des téléphones IP, des éclairages LED et des systèmes de sécurité, ... où bon vous semble car vous n'avez plus besoin d'alimentation électrique à proximité. Ces appareils sont alimentés et manageables via nos switches PoE, que ce soit au bureau ou à la maison.
-mj-section 
-    mj-group
+        mj-image(padding="0" width="700px" src="./images/illustrationGS308P.png" alt="")
+        mj-text(padding="0" align="center") Alimentez vos périphériques via le PoE
+        mj-text(padding="0" align="center") La technologie PoE fournit une alimentation électrique et une connectivité réseau pour les périphériques PoE via un câble réseau. Vous pouvez placer des appareils tels que des points d'accès WiFi, des caméras IP, des téléphones, des téléphones IP, des éclairages LED et des systèmes de sécurité, ... où bon vous semble car vous n'avez plus besoin d'alimentation électrique à proximité. Ces appareils sont alimentés et manageables via nos switches PoE, que ce soit au bureau ou à la maison.
+mj-section
+    mj-group(width="100%")
         mj-column
             mj-image(src="./images/gs308p.png" alt="")
         mj-column
@@ -13,5 +13,5 @@ mj-section
             mj-text Budget PoE : 53 W
             mj-text Garantie : 3 ans
             mj-text Référence : GS308P-100EUS
-    mj-column
+    mj-column(width="100%")
         mj-button retrouvez toutes nos offres sur le switching poe
