--- a/src/includes/_prod01.pug
+++ b/src/includes/_prod01.pug
@@ -2,18 +2,18 @@ mj-section
     mj-column
         mj-image(padding="0" width="700px" src="./images/illustrationWAX214.png" alt="")/
         mj-text(padding="0" align="center") Un WiFi puissant et abordable
-        mj-text(padding="0" align="center") Des TPE aux PME, NETGEAR propose une gamme de produits WiFi qui fournit des connexions ultra-rapides à un tarif abordable. Déployez un WiFi professionnel, sécurisé et fiable avec NETGEAR.
+        mj-text(padding="0" align="center" mj-class="T14-400") Des TPE aux PME, NETGEAR propose une gamme de produits WiFi qui fournit des connexions ultra-rapides à un tarif abordable. Déployez un WiFi professionnel, sécurisé et fiable avec NETGEAR.
 mj-section
     mj-group(width="100%")
-        mj-column
+        mj-column(vertical-align="middle")
             mj-image(src="./images/wax214.png" alt="")/
-        mj-column
-            mj-text wax124
-            mj-text WiFi 6 AX1800 1.8 Gbit
-            mj-text Dual band (2.4 GHz et 5.0 GHz)
-            mj-text Port Ethernet Gigabit
-            mj-text Alimentable en PoE
-            mj-text Garantie : 5ans
-            mj-text Référence : WAX214-100EUS
+        mj-column(vertical-align="middle")
+            mj-text(padding="0") wax124
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") WiFi 6 AX1800 1.8 Gbit
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") Dual band (2.4 GHz et 5.0 GHz)
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") Port Ethernet Gigabit
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") Alimentable en PoE
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") Garantie : 5ans
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") Référence : WAX214-100EUS
     mj-column(width="100%")
         mj-button retrouvez toutes nos offres wifi
