mettre en place des styles de base du bloc prod02

--- a/src/includes/_prod02.pug
+++ b/src/includes/_prod02.pug
@@ -2,17 +2,17 @@ mj-section
     mj-column
         mj-image(padding="0" width="700px" src="./images/illustrationGS108E.png" alt="")/
         mj-text(padding="0" align="center") Des Switches de pointe
-        mj-text(padding="0" align="center") Les switches NETGEAR non manageables sont les plus populaires auprès des petites entreprises. Au cours des 25 dernières années, nous avons vendu plusieurs millions de switches, dans le monde entier. Nos clients apprécient la fiabilité, la qualité de fabrication, la facilité d'installation et la rentabilité.
-        mj-text(padding="0" align="center") Les switches Web manageables NETGEAR offrent des fonctionnalités avancées de niveau 2. Ils sont conçus pour les réseaux convergents où les données comme la voix ou la vidéo sont routées via une plateforme unique. Les fonctionnalités ACL, la QoS, l'agrégation de lien LACP et le protocole STP garantissent un environnement sécurisé & haut débit pour les besoins réseau de l'entreprise.
+        mj-text(padding="0" align="center" mj-class="T14-400") Les switches NETGEAR non manageables sont les plus populaires auprès des petites entreprises. Au cours des 25 dernières années, nous avons vendu plusieurs millions de switches, dans le monde entier. Nos clients apprécient la fiabilité, la qualité de fabrication, la facilité d'installation et la rentabilité.
+        mj-text(padding="0" align="center" mj-class="T14-400") Les switches Web manageables NETGEAR offrent des fonctionnalités avancées de niveau 2. Ils sont conçus pour les réseaux convergents où les données comme la voix ou la vidéo sont routées via une plateforme unique. Les fonctionnalités ACL, la QoS, l'agrégation de lien LACP et le protocole STP garantissent un environnement sécurisé & haut débit pour les besoins réseau de l'entreprise.
 mj-section
     mj-group(width="100%")
-        mj-column
+        mj-column(vertical-align="middle")
             mj-image(src="./images/gs108e.png" alt="")/
-        mj-column
-            mj-text gs108e
-            mj-text 8 ports Gigabit
-            mj-text Gestion des vlans
-            mj-text Garantie : à vie
-            mj-text Référence : gs108e-100eus
+        mj-column(vertical-align="middle")
+            mj-text(padding="0") gs108e
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") 8 ports Gigabit
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") Gestion des vlans
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") Garantie : à vie
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") Référence : gs108e-100eus
     mj-column(width="100%")
         mj-button retrouvez toutes nos offres sur le switching
