--- a/src/includes/_prod03.pug
+++ b/src/includes/_prod03.pug
@@ -1,17 +1,17 @@
 mj-section
     mj-column
         mj-image(padding="0" width="700px" src="./images/illustrationGS308P.png" alt="")
-        mj-text(padding="0" align="center") Alimentez vos périphériques via le PoE
-        mj-text(padding="0" align="center") La technologie PoE fournit une alimentation électrique et une connectivité réseau pour les périphériques PoE via un câble réseau. Vous pouvez placer des appareils tels que des points d'accès WiFi, des caméras IP, des téléphones, des téléphones IP, des éclairages LED et des systèmes de sécurité, ... où bon vous semble car vous n'avez plus besoin d'alimentation électrique à proximité. Ces appareils sont alimentés et manageables via nos switches PoE, que ce soit au bureau ou à la maison.
+        mj-text(padding="0" align="center" mj-class="T14-400") Alimentez vos périphériques via le PoE
+        mj-text(padding="0" align="center" mj-class="T14-400") La technologie PoE fournit une alimentation électrique et une connectivité réseau pour les périphériques PoE via un câble réseau. Vous pouvez placer des appareils tels que des points d'accès WiFi, des caméras IP, des téléphones, des téléphones IP, des éclairages LED et des systèmes de sécurité, ... où bon vous semble car vous n'avez plus besoin d'alimentation électrique à proximité. Ces appareils sont alimentés et manageables via nos switches PoE, que ce soit au bureau ou à la maison.
 mj-section
     mj-group(width="100%")
-        mj-column
+        mj-column(middle-align="middle")
             mj-image(src="./images/gs308p.png" alt="")
-        mj-column
-            mj-text gs308p
-            mj-text 8 ports Gigabit dont 4 PoE
-            mj-text Budget PoE : 53 W
-            mj-text Garantie : 3 ans
-            mj-text Référence : GS308P-100EUS
+        mj-column(middle-align="middle")
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") gs308p
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") 8 ports Gigabit dont 4 PoE
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") Budget PoE : 53 W
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") Garantie : 3 ans
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") Référence : GS308P-100EUS
     mj-column(width="100%")
         mj-button retrouvez toutes nos offres sur le switching poe
