correction des blocs

--- a/src/includes/_prod03.pug
+++ b/src/includes/_prod03.pug
@@ -5,9 +5,9 @@ mj-section
         mj-text(padding="0" align="center" mj-class="T14-400") La technologie PoE fournit une alimentation électrique et une connectivité réseau pour les périphériques PoE via un câble réseau. Vous pouvez placer des appareils tels que des points d'accès WiFi, des caméras IP, des téléphones, des téléphones IP, des éclairages LED et des systèmes de sécurité, ... où bon vous semble car vous n'avez plus besoin d'alimentation électrique à proximité. Ces appareils sont alimentés et manageables via nos switches PoE, que ce soit au bureau ou à la maison.
 mj-section
     mj-group(width="100%")
-        mj-column(middle-align="middle")
+        mj-column(vertical-align="middle")
             mj-image(src="./images/gs308p.png" alt="")
-        mj-column(middle-align="middle")
+        mj-column(vertical-align="middle")
             mj-text(padding="0" mj-class="T14-400" line-height="20px") gs308p
             mj-text(padding="0" mj-class="T14-400" line-height="20px") 8 ports Gigabit dont 4 PoE
             mj-text(padding="0" mj-class="T14-400" line-height="20px") Budget PoE : 53 W
