--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -109,10 +109,10 @@
     </mj-section>
     <mj-section>
       <mj-group width="100%">
-        <mj-column middle-align="middle">
+        <mj-column vertical-align="middle">
           <mj-image src="./images/gs308p.png" alt=""></mj-image>
         </mj-column>
-        <mj-column middle-align="middle">
+        <mj-column vertical-align="middle">
           <mj-text padding="0" mj-class="T14-400" line-height="20px">gs308p</mj-text>
           <mj-text padding="0" mj-class="T14-400" line-height="20px">8 ports Gigabit dont 4 PoE</mj-text>
           <mj-text padding="0" mj-class="T14-400" line-height="20px">Budget PoE : 53 W</mj-text>
