correction en sortant l'attribut line-height

--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -1,4 +1,4 @@
 mj-section
     mj-column 
-        mj-text(padding="0" align="center") Nouvelles promotions partenaires 
+        mj-text(padding="0" align="center" mj-class="T35-300" line-height="45px") Nouvelles promotions partenaires 
         mj-text(padding="0" align="center") 3e trimestre
