--- a/src/includes/_prod01.pug
+++ b/src/includes/_prod01.pug
@@ -1,8 +1,8 @@
 mj-section
     mj-column
         mj-image(padding="0" width="700px" src="./images/illustrationWAX214.png" alt="")/
-        mj-text(padding="0" align="center") Un WiFi puissant et abordable
-        mj-text(padding="0" align="center" mj-class="T14-400") Des TPE aux PME, NETGEAR propose une gamme de produits WiFi qui fournit des connexions ultra-rapides à un tarif abordable. Déployez un WiFi professionnel, sécurisé et fiable avec NETGEAR.
+        mj-text(padding="0" align="center" mj-class="T35-300" line-height="42px") Un WiFi puissant et abordable
+        mj-text(padding="0" align="center" mj-class="T14-400" line-height="18px") Des TPE aux PME, NETGEAR propose une gamme de produits WiFi qui fournit des connexions ultra-rapides à un tarif abordable. Déployez un WiFi professionnel, sécurisé et fiable avec NETGEAR.
 mj-section
     mj-group(width="100%")
         mj-column(vertical-align="middle")
