--- a/src/includes/_prod03.pug
+++ b/src/includes/_prod03.pug
@@ -1,8 +1,8 @@
 mj-section
     mj-column
         mj-image(padding="0" width="700px" src="./images/illustrationGS308P.png" alt="")
-        mj-text(padding="0" align="center" mj-class="T14-400") Alimentez vos périphériques via le PoE
-        mj-text(padding="0" align="center" mj-class="T14-400") La technologie PoE fournit une alimentation électrique et une connectivité réseau pour les périphériques PoE via un câble réseau. Vous pouvez placer des appareils tels que des points d'accès WiFi, des caméras IP, des téléphones, des téléphones IP, des éclairages LED et des systèmes de sécurité, ... où bon vous semble car vous n'avez plus besoin d'alimentation électrique à proximité. Ces appareils sont alimentés et manageables via nos switches PoE, que ce soit au bureau ou à la maison.
+        mj-text(padding="0" align="center" mj-class="T35-300" line-height="42px") Alimentez vos périphériques via le PoE
+        mj-text(padding="0" align="center" mj-class="T14-400" line-height="18px") La technologie PoE fournit une alimentation électrique et une connectivité réseau pour les périphériques PoE via un câble réseau. Vous pouvez placer des appareils tels que des points d'accès WiFi, des caméras IP, des téléphones, des téléphones IP, des éclairages LED et des systèmes de sécurité, ... où bon vous semble car vous n'avez plus besoin d'alimentation électrique à proximité. Ces appareils sont alimentés et manageables via nos switches PoE, que ce soit au bureau ou à la maison.
 mj-section
     mj-group(width="100%")
         mj-column(vertical-align="middle")
