style des blocs prod01 prod02 prod03

--- a/src/includes/_prod03.pug
+++ b/src/includes/_prod03.pug
@@ -8,10 +8,11 @@ mj-section
         mj-column(vertical-align="middle")
             mj-image(src="./images/gs308p.png" alt="")
         mj-column(vertical-align="middle")
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") gs308p
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") 8 ports Gigabit dont 4 PoE
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") Budget PoE : 53 W
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") Garantie : 3 ans
+            mj-text(padding="0" mj-class="T24-500" line-height="28px") #[span(style="text-transform:uppercase;") gs308p]
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") 8 ports #[strong Gigabit dont 4 PoE]
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Budget PoE :] 53 W
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Non manageable]
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Garantie :] 3 ans
             mj-text(padding="0" mj-class="T14-400" line-height="20px") Référence : GS308P-100EUS
     mj-column(width="100%")
         mj-button retrouvez toutes nos offres sur le switching poe
