--- a/src/includes/_prod01.pug
+++ b/src/includes/_prod01.pug
@@ -8,12 +8,12 @@ mj-section
         mj-column(vertical-align="middle")
             mj-image(src="./images/wax214.png" alt="")/
         mj-column(vertical-align="middle")
-            mj-text(padding="0") wax124
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") WiFi 6 AX1800 1.8 Gbit
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") Dual band (2.4 GHz et 5.0 GHz)
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") Port Ethernet Gigabit
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") Alimentable en PoE
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") Garantie : 5ans
+            mj-text(padding="0" mj-class="T24-500" line-height="28px") #[span(style="text-transform:uppercase;") wax124]
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong WiFi 6 AX1800] 1.8 Gbit/s
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Dual band] (2.4 GHz et 5.0 GHz)
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") Port Ethernet #[strong Gigabit]
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") Alimentable en #[strong PoE]
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Garantie] : 5ans
             mj-text(padding="0" mj-class="T14-400" line-height="20px") Référence : WAX214-100EUS
     mj-column(width="100%")
         mj-button retrouvez toutes nos offres wifi
