--- a/src/includes/_prod02.pug
+++ b/src/includes/_prod02.pug
@@ -9,10 +9,11 @@ mj-section
         mj-column(vertical-align="middle")
             mj-image(src="./images/gs108e.png" alt="")/
         mj-column(vertical-align="middle")
-            mj-text(padding="0") gs108e
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") 8 ports Gigabit
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") Gestion des vlans
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") Garantie : à vie
+            mj-text(padding="0" mj-class="T24-500" line-height="28px") #[span(style="text-transform:uppercase;") gs108e]
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") 8 ports #[strong Gigabit]
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") Fonctionnalités #[strong d]
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") Gestion des #[strong VLANs]
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Garantie :] à vie
             mj-text(padding="0" mj-class="T14-400" line-height="20px") Référence : gs108e-100eus
     mj-column(width="100%")
         mj-button retrouvez toutes nos offres sur le switching
