--- a/src/includes/_prod01.pug
+++ b/src/includes/_prod01.pug
@@ -13,7 +13,7 @@ mj-section
             mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Dual band] (2.4 GHz et 5.0 GHz)
             mj-text(padding="0" mj-class="T14-400" line-height="20px") Port Ethernet #[strong Gigabit]
             mj-text(padding="0" mj-class="T14-400" line-height="20px") Alimentable en #[strong PoE]
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Garantie] : 5ans
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") Référence : WAX214-100EUS
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Garantie :] 5ans
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Référence :] WAX214-100EUS
     mj-column(width="100%")
         mj-button retrouvez toutes nos offres wifi
