--- a/src/includes/_prod02.pug
+++ b/src/includes/_prod02.pug
@@ -14,6 +14,6 @@ mj-section
             mj-text(padding="0" mj-class="T14-400" line-height="20px") Fonctionnalités #[strong d]
             mj-text(padding="0" mj-class="T14-400" line-height="20px") Gestion des #[strong VLANs]
             mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Garantie :] à vie
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") Référence : gs108e-100eus
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Référence :] gs108e-100eus
     mj-column(width="100%")
         mj-button retrouvez toutes nos offres sur le switching
