--- a/src/includes/_prod03.pug
+++ b/src/includes/_prod03.pug
@@ -13,6 +13,6 @@ mj-section
             mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Budget PoE :] 53 W
             mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Non manageable]
             mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Garantie :] 3 ans
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") Référence : GS308P-100EUS
+            mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Référence :] GS308P-100EUS
     mj-column(width="100%")
         mj-button retrouvez toutes nos offres sur le switching poe
