--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -68,8 +68,8 @@
           <mj-text padding="0" mj-class="T14-400" line-height="20px"><strong>Dual band</strong> (2.4 GHz et 5.0 GHz)</mj-text>
           <mj-text padding="0" mj-class="T14-400" line-height="20px">Port Ethernet <strong>Gigabit</strong></mj-text>
           <mj-text padding="0" mj-class="T14-400" line-height="20px">Alimentable en <strong>PoE</strong></mj-text>
-          <mj-text padding="0" mj-class="T14-400" line-height="20px"><strong>Garantie</strong> : 5ans</mj-text>
-          <mj-text padding="0" mj-class="T14-400" line-height="20px">Référence : WAX214-100EUS</mj-text>
+          <mj-text padding="0" mj-class="T14-400" line-height="20px"><strong>Garantie :</strong> 5ans</mj-text>
+          <mj-text padding="0" mj-class="T14-400" line-height="20px"><strong>Référence :</strong> WAX214-100EUS</mj-text>
         </mj-column>
       </mj-group>
       <mj-column width="100%">
@@ -95,7 +95,7 @@
           <mj-text padding="0" mj-class="T14-400" line-height="20px">Fonctionnalités <strong>d</strong></mj-text>
           <mj-text padding="0" mj-class="T14-400" line-height="20px">Gestion des <strong>VLANs</strong></mj-text>
           <mj-text padding="0" mj-class="T14-400" line-height="20px"><strong>Garantie :</strong> à vie</mj-text>
-          <mj-text padding="0" mj-class="T14-400" line-height="20px">Référence : gs108e-100eus</mj-text>
+          <mj-text padding="0" mj-class="T14-400" line-height="20px"><strong>Référence :</strong> gs108e-100eus</mj-text>
         </mj-column>
       </mj-group>
       <mj-column width="100%">
@@ -120,7 +120,7 @@
           <mj-text padding="0" mj-class="T14-400" line-height="20px"><strong>Budget PoE :</strong> 53 W</mj-text>
           <mj-text padding="0" mj-class="T14-400" line-height="20px"><strong>Non manageable</strong></mj-text>
           <mj-text padding="0" mj-class="T14-400" line-height="20px"><strong>Garantie :</strong> 3 ans</mj-text>
-          <mj-text padding="0" mj-class="T14-400" line-height="20px">Référence : GS308P-100EUS</mj-text>
+          <mj-text padding="0" mj-class="T14-400" line-height="20px"><strong>Référence :</strong> GS308P-100EUS</mj-text>
         </mj-column>
       </mj-group>
       <mj-column width="100%">
