--- a/src/includes/_prod02.pug
+++ b/src/includes/_prod02.pug
@@ -2,8 +2,8 @@ mj-section
     mj-column
         mj-image(padding="0" width="700px" src="./images/illustrationGS108E.png" alt="")/
         mj-text(padding="0" align="center" mj-class="T35-300" line-height="42px") Des Switches de pointe
-        mj-text(padding="0" align="center" mj-class="T14-400" line-height="18px") Les switches NETGEAR non manageables sont les plus populaires auprès des petites entreprises. Au cours des 25 dernières années, nous avons vendu plusieurs millions de switches, dans le monde entier. Nos clients apprécient la fiabilité, la qualité de fabrication, la facilité d'installation et la rentabilité.
-        mj-text(padding="0" align="center" mj-class="T14-400" line-height="18px") Les switches Web manageables NETGEAR offrent des fonctionnalités avancées de niveau 2. Ils sont conçus pour les réseaux convergents où les données comme la voix ou la vidéo sont routées via une plateforme unique. Les fonctionnalités ACL, la QoS, l'agrégation de lien LACP et le protocole STP garantissent un environnement sécurisé & haut débit pour les besoins réseau de l'entreprise.
+        mj-text(padding="0" align="center" mj-class="T14-400" line-height="18px") #[strong Les switches NETGEAR non manageables sont les plus populaires] auprès des petites entreprises. Au cours des 25 dernières années, nous avons vendu plusieurs millions de switches, dans le monde entier. Nos clients apprécient la fiabilité, la qualité de fabrication, la facilité d'installation et la rentabilité.
+        mj-text(padding="0" align="center" mj-class="T14-400" line-height="18px") #[strong Les switches Web manageables NETGEAR offrent des fonctionnalités avancées de niveau 2.] Ils sont conçus pour les réseaux convergents où les données comme la voix ou la vidéo sont routées via une plateforme unique. Les fonctionnalités ACL, la QoS, l'agrégation de lien LACP et le protocole STP garantissent un environnement sécurisé & haut débit pour les besoins réseau de l'entreprise.
 mj-section
     mj-group(width="100%")
         mj-column(vertical-align="middle")
